--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <header>
-
+<body class="lg:m-12">
+    <header class="flex justify-between bg-[#1090d819] items-center py-5 px-12">
+        <div>
+            <h1 class="text-4xl font-bold">Interactive<br>
+                <span class="font-normal">Geometry Genius</span></h1>
+        </div>
+        <button class="w-24 h-12 font-bold btn text-white bg-[#1090D8]">Blog</button>
     </header>
     <main>
 
