--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <body class="lg:m-12">
     <header class="flex items-center justify-between px-12 py-5 mb-12 bg-primary-content">
         <div>
-            <h1 class="text-4xl font-bold">Interactive<br>
+            <h1 class="text-xl lg:text-4xl font-bold">Interactive<br>
                 <span class="font-normal">Geometry Genius</span>
             </h1>
         </div>
         <button class="w-24 h-12 font-bold text-white btn btn-info">Blog</button>
     </header>
     <main>
-        <div>
+        <div class=" lg:flex justify-between grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <!-- card 1 -->
             <div class="shadow-xl card w-96 bg-base-100">
                 <figure class="px-10 pt-10">
                     <img src="./images/triangle.png" />
@@ -28,13 +29,59 @@
                     <h2 class="card-title">Triangle</h2>
                     <p>Area (A) = 0.5 X b X h</p>
                     <div class="flex gap-4">
-                        <input id="triangle-base" class="w-full max-w-xs input input-bordered input-secondary" placeholder="base" type="text">
-                        <input id="triangle-height" class="w-full max-w-xs input input-bordered input-primary" placeholder="height" type="text">
+                        <input id="triangle-base" class="w-full max-w-xs input input-bordered input-secondary"
+                            placeholder="base" type="text">
+                        <input id="triangle-height" class="w-full max-w-xs input input-bordered input-primary"
+                            placeholder="height" type="text">
                     </div>
                     <div class="w-full card-actions">
-                        <button class="w-full text-xl text-white btn btn-info" onclick="getTriangleInfo()">calculate</button>
+                        <button class="w-full text-xl text-white btn btn-info"
+                            onclick="getTriangleInfo()">calculate</button>
                     </div>
                 </div>
+            </div>
+            <!-- card 2 -->
+            <div class="shadow-xl card w-96 bg-base-100">
+                <figure class="px-10 pt-10">
+                    <img src="./images/triangle.png" />
+                </figure>
+                <div class="items-center text-center card-body gap-y-6">
+                    <h2 class="card-title">Triangle</h2>
+                    <p>Area (A) = 0.5 X b X h</p>
+                    <div class="flex gap-4">
+                        <input id="triangle-base" class="w-full max-w-xs input input-bordered input-secondary"
+                            placeholder="base" type="text">
+                        <input id="triangle-height" class="w-full max-w-xs input input-bordered input-primary"
+                            placeholder="height" type="text">
+                    </div>
+                    <div class="w-full card-actions">
+                        <button class="w-full text-xl text-white btn btn-info"
+                            onclick="getTriangleInfo()">calculate</button>
+                    </div>
+                </div>
+            </div>
+            <!-- card 3 -->
+            <div class="shadow-xl card w-96 bg-base-100">
+                <figure class="px-10 pt-10">
+                    <img src="./images/triangle.png" />
+                </figure>
+                <div class="items-center text-center card-body gap-y-6">
+                    <h2 class="card-title">Triangle</h2>
+                    <p>Area (A) = 0.5 X b X h</p>
+                    <div class="flex gap-4">
+                        <input id="triangle-base" class="w-full max-w-xs input input-bordered input-secondary"
+                            placeholder="base" type="text">
+                        <input id="triangle-height" class="w-full max-w-xs input input-bordered input-primary"
+                            placeholder="height" type="text">
+                    </div>
+                    <div class="w-full card-actions">
+                        <button class="w-full text-xl text-white btn btn-info"
+                            onclick="getTriangleInfo()">calculate</button>
+                    </div>
+                </div>
+            </div>
+            <div id="calculate-area" class="bg-success w-full lg:w-[437px] lg:h-[454] pt-4 text-white text-xl font-semibold">
+                <h1 class="text-3xl font-bold text-white text-center border-b-2 border-white w-[300px] mx-auto">Area Calculation</h1>
             </div>
         </div>
     </main>
