--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </main>
-    <script src="js/script.js"></script>
+    <script src="js/triangle.js"></script>
     <script src="js/rectangle.js"></script>
 </body>
 
